# clinical-trial-data-platform

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-dev.yml
data/synthetic/: generator.py
docs/: ANALYTICS_SHOWCASE.md  SECURITY.md
docs/adr/: 001-aws-native-approach.md  002-medallion-architecture.md  003-cdisc-compliance.md  004-cost-optimization.md
docs/architecture/: ARCHITECTURE.md  DATA_MODEL.md  DIAGRAMS.md
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/: dev.tfvars  prod.tfvars
infrastructure/terraform/modules/glue/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/redshift/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
scripts/: setup_local.sh  teardown_aws.sh
src/analytics/sql/sample_queries/: clinical_analytics.sql
src/data_quality/: lineage_tracker.py  validators.py
src/data_quality/tests/: test_validators.py
src/governance/: data_contracts.py  dq_report_generator.py  openlineage_events.py
src/ingestion/package/: lambda_handler.py
src/ingestion/package/jmespath-1.1.0.dist-info/: RECORD
src/ingestion/tests/: test_lambda_handler.py
src/transformation/glue_jobs/: bronze_to_silver.py  silver_to_gold.py
